--- a/erdos_woods.qmd
+++ b/erdos_woods.qmd
@@ -13,7 +13,7 @@ Vamos chamar um intervalo de números naturais $\{a,a+1,\ldots,a+k\}$ *intervalo
 $$
 \{5,6,7,8,9\}
 $$
-não é de Erdős-Woods, pois $7$ é coprimo com $5$ e também com $9$. Um número natural $k\in\mathbb N$ é dito [*número de Erdős-Woods*](https://en.wikipedia.org/wiki/Erd%C5%91s%E2%80%93Woods_number) (veja também na [OEIS](https://oeis.org/A111042)), se existe um intervalo de Erdős-Woods na forma $\{a,\ldots,a+k\}$. Por exemplo, $2$ não é número de Erdős-Woods, pois no intervalo $\{a,a+1,a+2\}$ o número $a+1$ é coprimo com $a$ e também com $a+2$. 
+não é de Erdős-Woods, pois $7$ é coprimo com $5$ e também com $9$. Um número natural $k\in\mathbb N$ é dito [*número de Erdős-Woods*](https://en.wikipedia.org/wiki/Erd%C5%91s%E2%80%93Woods_number) (veja também na [OEIS](https://oeis.org/A111042)), se existe um intervalo de Erdős-Woods na forma $\{a,\ldots,a+k\}$. Por exemplo, $2$ não é número de Erdős-Woods, pois no intervalo $\{a,a+1,a+2\}$, o número $a+1$ é coprimo com $a$ e também com $a+2$. 
 :::
 
 ## Exploração interativa
@@ -27,7 +27,7 @@ gap> a := 10; k := 5;
 gap> Filtered( [a..a+k], x-> GcdInt( a, x ) = 1 and GcdInt( a+k,x) = 1 );
 [ 11, 13 ]
 ```
-Ou seja, os números $11$ e $13$ são coprimos com o início e com o final do intervalo.
+Ou seja, os números $11$ e $13$ são coprimos com o início e com o final do intervalo. Logo este intervalo não é de Erdős-Woods.
 :::
 
 ## Tarefa 
@@ -40,18 +40,18 @@ false
 gap> is_ew_interval( 13,4 );
 false
 ```
-2. Use a função escrito no item anterior para verificar que os números $16$ e $22$ são de Erdős-Woods. Ache os intervalos que testemunham que estes números são de fato de Erdős-Woods.
+2. Use a função escrita no item anterior para verificar que os números $16$ e $22$ são de Erdős-Woods. Ache os intervalos que testemunham que estes números são de fato de Erdős-Woods.
 3. Consegue achar mais números de Erdős-Woods?
 :::
 
 :::{.hint}
-Para verificar um intervalo, pode usar `Filtered` como no exemplo anterior ou o laço `for` (@sec-for) e a função `GcdInt` ([manual](https://docs.gap-system.org/doc/ref/chap14.html#X7A4FEFCA8128E3C3)) dentro do laço. .
+Para verificar um intervalo, pode usar `Filtered` como no exemplo anterior ou o laço `for` (@sec-for) e a função `GcdInt` ([manual](https://docs.gap-system.org/doc/ref/chap14.html#X7A4FEFCA8128E3C3)) dentro do laço. A expressão `break` (@sec-break-continue) também pode ser útil caso queira usar laços.
 :::
+
 
 Este projeto foi inspirado pelo seguinte vídeo.
 
 {{< video https://youtu.be/uJtxlErlx0U?si=9UMP-f-plab_gj3B width="560" height="315" >}}
-
 
 <!--
 is_ew_interval := function( a, k )
