--- a/collatz.qmd
+++ b/collatz.qmd
@@ -17,7 +17,7 @@ $$
 $$
 A [Conjetura de Collatz](https://en.wikipedia.org/wiki/Collatz_conjecture) afirma que para todo $n\in\N$, existe um número $k$ tal que aplicando a função $f$ consecutivamente $k$ vezes em $n$, o resultado vai ser igual a $1$. Em outras palavras, para todo $n\in\mathbb N$, existe algum $k\geq 1$ tais que  $f^k(n)=1$.
 
-A conjetura foi atacado por vários matemáticos sem sucesso. [Terence Tao recentemente](https://terrytao.wordpress.com/2019/09/10/almost-all-collatz-orbits-attain-almost-bounded-values/) conseguiu melhorar significativamente os reslutados existentes. 
+A conjetura foi atacada por vários matemáticos sem sucesso. [Terence Tao recentemente](https://terrytao.wordpress.com/2019/09/10/almost-all-collatz-orbits-attain-almost-bounded-values/) conseguiu melhorar significativamente os reslutados existentes. 
 :::
 
 ## Tarefa 1
