--- a/grafos.qmd
+++ b/grafos.qmd
@@ -55,7 +55,7 @@ e neste caso o conjunto de arestas vai ser <Arg>ares</Arg>.
 ```matlab
 gap> LoadPackage( "grape" );
 true
-gap> EdgeOrbitsGraph( Group(()), ares, 10 );
+gap> G := EdgeOrbitsGraph( Group(()), ares, 10 );
 rec( adjacencies := [ [ 8, 9, 10 ], [ 6, 7, 10 ], [ 5, 7, 9 ], [ 5, 6, 8 ], 
       [ 3, 4, 10 ], [ 2, 4, 9 ], [ 2, 3, 8 ], [ 1, 4, 7 ], [ 1, 3, 6 ], 
       [ 1, 2, 5 ] ], group := Group(()), isGraph := true, order := 10, 
